сделала табличку с информацмей

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylemedia1.css">
     <link rel="stylesheet" href="stylemadia2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +22,45 @@
                     </div>
                 </div>
                 <div class="transports__info">
-                    <div class="transport__info"></div>
+                    <div class="transport__info">
+                        <ul class="active">
+                            <li >Информация</li>
+                            <li >Расписание</li>
+                            <li >Маршрут</li>
+                        </ul>
+                        <div class="title">
+                            <div class="title__item">
+                                <img class="title__icon" src="Маршрутка.png">
+                                <div>
+                                    <h5 class="taxi">57 маршрутное такси</h5>
+                                    <p class="route">Красная горка - Деликат</p>
+                                </div>
+                            </div>
+                            <div class="status">
+                                <h5 class="number">№3567</h5>
+                                <div class="ststus__now">
+                                    <img src="Ellipse 41.png">
+                                    <p>Сейчас</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="data">
+                            <h5 class="">Транспорт</h5>
+                            <ul class="characteristic">
+                                <li>Остановки: <span>29</span></li>
+                                <li>Номер транспорта: <span>3567</span></li>
+                                <li>Текущее местоположение:<span> Улица Ленина</span></li>
+                                <li>Состояние:<span>В движении</span> </li>
+                                <li>Скорость:<span>20 км/ч</span> </li>
+                            </ul>
+                        </div>
+                        <div class="driver">
+                            <h5 class="driver__head">Водитель</h5>
+                            <p><img src="User/Vector.png" alt=""> Иванов Иван Иванович</p>
+                        </div>
+                    </div>
+                    
+                    </div>
                     <div class="transport__info"></div>
                     <div class="transport__info"></div>
                 </div>
