добавила поиск и отфильтрованные кружочки

--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
     <div class="wrapper">
         <div class="transport">
                 <div class="transport__filters">
-                    <div class="search"></div>
+                    <div class="search">
+                        <input class="search__text" type="text" name="search" placeholder="Поиск">
+                        <img src="Interface/Filter.png" class="search__img">
+                    </div>
                     <div class="filters">
-                        <div class="filter"></div>
-                        <div class="filter"></div>
+                        <div class="filter">
+                            <p class="filter__text">Маршрутка</p>
+                            <img src="mingcute_close-line.png" alt="">
+                        </div>
+                        <div class="filter">
+                            <p class="filter__text">Маршрутка</p>
+                            <img src="mingcute_close-line.png" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="transports__info">
@@ -45,7 +54,7 @@
                             </div>
                         </div>
                         <div class="data">
-                            <h5 class="">Транспорт</h5>
+                            <h5 class="subtitle">Транспорт</h5>
                             <ul class="characteristic">
                                 <li>Остановки: <span>29</span></li>
                                 <li>Номер транспорта: <span>3567</span></li>
@@ -55,14 +64,84 @@
                             </ul>
                         </div>
                         <div class="driver">
-                            <h5 class="driver__head">Водитель</h5>
+                            <h5 class="subtitle">Водитель</h5>
                             <p><img src="User/Vector.png" alt=""> Иванов Иван Иванович</p>
                         </div>
                     </div>
-                    
+                    <div class="transport__info">
+                        <ul class="active">
+                            <li >Информация</li>
+                            <li >Расписание</li>
+                            <li >Маршрут</li>
+                        </ul>
+                        <div class="title">
+                            <div class="title__item">
+                                <img class="title__icon" src="Маршрутка.png">
+                                <div>
+                                    <h5 class="taxi">57 маршрутное такси</h5>
+                                    <p class="route">Красная горка - Деликат</p>
+                                </div>
+                            </div>
+                            <div class="status">
+                                <h5 class="number">№3567</h5>
+                                <div class="ststus__now">
+                                    <img src="Ellipse 41.png">
+                                    <p>Сейчас</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="data">
+                            <h5 class="subtitle">Транспорт</h5>
+                            <ul class="characteristic">
+                                <li>Остановки: <span>29</span></li>
+                                <li>Номер транспорта: <span>3567</span></li>
+                                <li>Текущее местоположение:<span> Улица Ленина</span></li>
+                                <li>Состояние:<span>В движении</span> </li>
+                                <li>Скорость:<span>20 км/ч</span> </li>
+                            </ul>
+                        </div>
+                        <div class="driver">
+                            <h5 class="subtitle">Водитель</h5>
+                            <p><img src="User/Vector.png" alt=""> Иванов Иван Иванович</p>
+                        </div>
                     </div>
-                    <div class="transport__info"></div>
-                    <div class="transport__info"></div>
+                    <div class="transport__info">
+                        <ul class="active">
+                            <li >Информация</li>
+                            <li >Расписание</li>
+                            <li >Маршрут</li>
+                        </ul>
+                        <div class="title">
+                            <div class="title__item">
+                                <img class="title__icon" src="Маршрутка.png">
+                                <div>
+                                    <h5 class="taxi">57 маршрутное такси</h5>
+                                    <p class="route">Красная горка - Деликат</p>
+                                </div>
+                            </div>
+                            <div class="status">
+                                <h5 class="number">№3567</h5>
+                                <div class="ststus__now">
+                                    <img src="Ellipse 41.png">
+                                    <p>Сейчас</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="data">
+                            <h5 class="subtitle">Транспорт</h5>
+                            <ul class="characteristic">
+                                <li>Остановки: <span>29</span></li>
+                                <li>Номер транспорта: <span>3567</span></li>
+                                <li>Текущее местоположение:<span> Улица Ленина</span></li>
+                                <li>Состояние:<span>В движении</span> </li>
+                                <li>Скорость:<span>20 км/ч</span> </li>
+                            </ul>
+                        </div>
+                        <div class="driver">
+                            <h5 class="subtitle">Водитель</h5>
+                            <p><img src="User/Vector.png" alt=""> Иванов Иван Иванович</p>
+                        </div>
+                    </div>
                 </div>
 
         </div>
